Added full support for blacklists. -did some other small changes here and there...

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -20,6 +20,6 @@ basedir = www
 # default: index.htm
 indexfile = index.htm
 
-# host/ip blacklist (not yet working)
+# host/ip blacklist
 # add them comma separated.
 #blacklist = 
