== Version detection, Request handling == *Fixed version detection for all supported versions. -HTTP/0.9 and HTTP/1.0 simple requests are now correctly detected.
*Added some support for HTTP/1.0 & 1.1 request handling (GET)
-Response 200 is now working for text/html files.
-Response 400 if request is not supported or invalid.
-Response 404 if file is not found.

*Moved version checking to block incorrect requests before parsing

*Added simple 404 error-page.
-It will now be send on HTTP/0.9 if file is not found.

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,7 +1,7 @@
 #***********************************************
 #*
 #*     15WebServ - Webserver       
-#*   Copyright © 2021 15peaces
+#*   Copyright © 2021 - 2025 15peaces
 #*
 #***********************************************
 #* Server configuration file.
@@ -20,6 +20,12 @@ basedir = www
 # default: index.htm
 indexfile = index.htm
 
+[blacklist]
 # host/ip blacklist
 # add them comma separated.
-#blacklist = 
+#hosts = 127.0.0.1
+
+# user-agents blacklist
+# add them comma separated.
+# Note: needs to be the exact user-agent!
+#agents = Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:108.0) Gecko/20100101 Firefox/108.0
