--- a/conf/logging.ini
+++ b/conf/logging.ini
@@ -1,7 +1,7 @@
 #***********************************************
 #*
 #*     15WebServ - Webserver       
-#*   Copyright © 2021 15peaces
+#*   Copyright © 2021 - 2025 15peaces
 #*
 #***********************************************
 #* Logging configuration.
