== misc == *Updated all build configurations & output names: ->All builds will now be created in the base directory. -Release x64: 15WebServ.exe (recommended build) -Debug x64: 15WebServ_debug.exe -Release 32bit: 15WebServ32.exe (recommended legacy build) -Debug 32bit: 15WebServ32_debug.exe *Some fixes.

--- a/src/15WebServ.csproj
+++ b/src/15WebServ.csproj
@@ -34,6 +34,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\</OutputPath>
+	<AssemblyName>15WebServ32_debug</AssemblyName>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -43,13 +44,15 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\</OutputPath>
+	<AssemblyName>15WebServ32</AssemblyName>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>..\</OutputPath>
+	<AssemblyName>15WebServ_debug</AssemblyName>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -58,7 +61,8 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <OutputPath>..\</OutputPath>
+	<AssemblyName>15WebServ</AssemblyName>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
